# vantablack

./: .gitignore  README.md  pyproject.toml
tests/: test_vantablack.py
vantablack/: __main__.py  registry.py  rule.py  runner.py  scope.py  scroll.py
vantablack/rules/: no_extra_files.py  ogg_only.py  require_chart.py  require_credit.py  restrict_field.py  ssc_only.py
vantablack/server/: __init__.py
vantablack/server/templates/: index.html
