[tool.poetry]
name = "vantablack"
version = "0.1.0"
description = ""
authors = ["Ben Kirzhner <ben.kirzhner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
simfile = { git = "https://github.com/garcia/simfile.git", branch = "dev" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
